[gd_scene load_steps=15 format=3 uid="uid://defsnl6fuhf2n"]

[ext_resource type="Script" uid="uid://cb7eaf223tte7" path="res://mini games/forge/forge_mini_game.gd" id="1_sicwk"]
[ext_resource type="Shader" uid="uid://r3nsaproj2ap" path="res://shaders/workpiece_shader.gdshader" id="3_klmno"]
[ext_resource type="Texture2D" uid="uid://dmuq6d4yl7422" path="res://assets/smithing/pngimg.com - sword_PNG5525.png" id="3_sicwk"]
[ext_resource type="AudioStream" uid="uid://bykecjav52vwo" path="res://assets/sfx/mini games/anvil/anvil_hit.wav" id="7_efghi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dp6gl"]
bg_color = Color(0.133333, 0.133333, 0.133333, 0.65098)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i7s8e"]
bg_color = Color(0.145098, 0.145098, 0.145098, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="ShaderMaterial" id="ShaderMaterial_roavf"]
shader = ExtResource("3_klmno")
shader_parameter/forge_progress = 1.0
shader_parameter/initial_deform = Vector2(1, 1)
shader_parameter/forge_center = Vector2(0.5, 0.5)
shader_parameter/impact_radius = 0.4
shader_parameter/bulge_strength = 0.0
shader_parameter/noise_influence = 0.0
shader_parameter/heat_amount = 0.0
shader_parameter/heat_at_top = false
shader_parameter/heat_spread = 2.0
shader_parameter/heat_min_level = 0.2
shader_parameter/heat_gradient_power = 0.8
shader_parameter/heat_gradient_smooth = 0.7
shader_parameter/heat_glow_threshold = 0.3
shader_parameter/heat_glow_intensity = 0.6
shader_parameter/heat_color_intensity = 0.85
shader_parameter/impact_intensity = 0.0
shader_parameter/impact_band_width = 0.1
shader_parameter/impact_color = Color(1, 1, 1, 1)
shader_parameter/flip_done = false
shader_parameter/impact_y_position = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_heat0"]
bg_color = Color(0.2, 0.2, 0.2, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_heat25"]
bg_color = Color(0.45, 0.25, 0.1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_heat50"]
bg_color = Color(0.8, 0.3, 0.1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_heat75"]
bg_color = Color(0.9, 0.4, 0.1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_heat100"]
bg_color = Color(1, 0.6, 0.1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_heat110"]
bg_color = Color(1, 0.9, 0.3, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_heat_fail"]
bg_color = Color(1, 0.2, 0.1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="ForgeMiniGame" type="CanvasLayer"]
script = ExtResource("1_sicwk")
heating_power = 10.0

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameTitle" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -92.0
offset_top = 40.0
offset_right = 92.0
offset_bottom = 75.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "Ковальський горн"
horizontal_alignment = 1

[node name="RightPanel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -580.0
offset_top = -200.0
offset_right = -180.0
offset_bottom = 200.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dp6gl")

[node name="ForgeContainer" type="Panel" parent="UI/RightPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_i7s8e")

[node name="HeatIndicator" type="TextureRect" parent="UI/RightPanel/ForgeContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_roavf")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 60.0
offset_right = -150.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(100, 156)
texture = ExtResource("3_sicwk")
expand_mode = 1
stretch_mode = 5

[node name="HeatLevelGuide" type="VBoxContainer" parent="UI/RightPanel/ForgeContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -130.0
offset_top = -170.0
offset_right = -10.0
offset_bottom = 170.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 14

[node name="GuideTitle" type="Label" parent="UI/RightPanel/ForgeContainer/HeatLevelGuide"]
layout_mode = 2
text = "Рівні нагріву:"
horizontal_alignment = 1

[node name="Heat0" type="Panel" parent="UI/RightPanel/ForgeContainer/HeatLevelGuide"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_heat0")

[node name="Label" type="Label" parent="UI/RightPanel/ForgeContainer/HeatLevelGuide/Heat0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "0%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Heat25" type="Panel" parent="UI/RightPanel/ForgeContainer/HeatLevelGuide"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_heat25")

[node name="Label" type="Label" parent="UI/RightPanel/ForgeContainer/HeatLevelGuide/Heat25"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "25%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Heat50" type="Panel" parent="UI/RightPanel/ForgeContainer/HeatLevelGuide"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_heat50")

[node name="Label" type="Label" parent="UI/RightPanel/ForgeContainer/HeatLevelGuide/Heat50"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "50%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Heat75" type="Panel" parent="UI/RightPanel/ForgeContainer/HeatLevelGuide"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_heat75")

[node name="Label" type="Label" parent="UI/RightPanel/ForgeContainer/HeatLevelGuide/Heat75"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "75%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Heat100" type="Panel" parent="UI/RightPanel/ForgeContainer/HeatLevelGuide"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_heat100")

[node name="Label" type="Label" parent="UI/RightPanel/ForgeContainer/HeatLevelGuide/Heat100"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "100%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Heat110" type="Panel" parent="UI/RightPanel/ForgeContainer/HeatLevelGuide"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_heat110")

[node name="Label" type="Label" parent="UI/RightPanel/ForgeContainer/HeatLevelGuide/Heat110"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "110%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HeatFailWarning" type="Panel" parent="UI/RightPanel/ForgeContainer/HeatLevelGuide"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_heat_fail")

[node name="Label" type="Label" parent="UI/RightPanel/ForgeContainer/HeatLevelGuide/HeatFailWarning"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "> 110%
(Провал)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BellowsButton" type="TextureRect" parent="UI/RightPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 220.0
offset_right = -72.0
offset_bottom = 348.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(64, 64)
stretch_mode = 5

[node name="ExtractButton" type="TextureRect" parent="UI/RightPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = 220.0
offset_right = 64.0
offset_bottom = 348.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(64, 64)
stretch_mode = 5

[node name="TooltipLabel" type="Label" parent="UI"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Розігрійте заготовку!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InstructionsLabel" type="Label" parent="UI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -70.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 14
text = "Натисніть X для активації міхів
Натисніть B коли досягнете потрібної температури"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EffectsLayer" type="CanvasLayer" parent="UI"]
layer = 2

[node name="SFX" type="Node" parent="."]

[node name="BellowsSound" type="AudioStreamPlayer" parent="SFX"]
unique_name_in_owner = true
stream = ExtResource("7_efghi")
volume_db = -10.0

[node name="FireSound" type="AudioStreamPlayer" parent="SFX"]
unique_name_in_owner = true
stream = ExtResource("7_efghi")
volume_db = -15.0

[node name="MetalHissSound" type="AudioStreamPlayer" parent="SFX"]
unique_name_in_owner = true
stream = ExtResource("7_efghi")
volume_db = -12.0
